Old plain text signature not updated before editing
on arch Linux with evolution 3.28.3-1 and webkit2gtk 2.20.3-1
I have the following email signature:
<div class="-x-evo-paragraph" style="width: 71ch; word-wrap: break-word; word-break: break-word; " data-evo-signature-plain-text-mode="">François Guerraz<br><br>Mobile: +44 xxxx xxxxxx<br>Tox ID : <a href="mailto:fguerraz@utox.org">fguerraz@utox.org</a><br><br>GPG Key fingerprint: 4A01 291A 9031 FB44 CE23<br> 6879 E6E8 9BDB 6ADB 1A1A<br><br>Managing Director - xx xx Limited - <a href="http://www.xx.xx/">http://www.xx.xx/</a><br>Company registered in England and Wales with company number xx</div>
Using the signature editor, if I select a line and delete it, something else is deleted and the cursor is moved somewhere else.
Then if I undo the change, the whole signature gets duplicated.