I#46 - Old plain text signature not updated before editing

Closes https://gitlab.gnome.org/GNOME/evolution/issues/46